[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Difficulty.gd" type="Script" id=1]
[ext_resource path="res://res/Subtitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Objects/RetroToggleButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/diff_btn_group.tres" type="ButtonGroup" id=4]

[node name="Difficulty" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 292.0
margin_right = 49.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Focus" ]

[node name="Difficulty Title" type="Label" parent="." index="0"]

modulate = Color( 1, 0.351563, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 683.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Difficulty"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="Heavy" parent="." index="1" instance=ExtResource( 3 )]

modulate = Color( 1, 0, 0, 1 )
margin_left = 236.0
margin_top = 80.0
margin_right = 468.0
margin_bottom = 160.0
focus_next = NodePath("../Medium")
focus_previous = NodePath("../light")
group = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Rect", "Textures", "Visibility" ]

[node name="Medium" parent="." index="2" instance=ExtResource( 3 )]

modulate = Color( 1, 0.820313, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 216.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = 240.0
focus_next = NodePath("../light")
focus_previous = NodePath("../Heavy")
group = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Rect", "Textures", "Visibility" ]

[node name="light" parent="." index="3" instance=ExtResource( 3 )]

modulate = Color( 0, 1, 0.179688, 1 )
margin_left = 236.0
margin_top = 280.0
margin_right = 468.0
margin_bottom = 360.0
focus_next = NodePath("../Heavy")
focus_previous = NodePath("../Medium")
group = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Rect", "Textures", "Visibility" ]

[connection signal="focus_entered" from="." to="." method="_on_Difficulty_focus_entered"]

[connection signal="button_up" from="Heavy" to="." method="_on_Heavy_button_up"]

[connection signal="button_up" from="Medium" to="." method="_on_Medium_button_up"]

[connection signal="button_up" from="light" to="." method="_on_light_button_up"]


